--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "react-babylonjs": "^3.0.11",
     "react-babylonjs-loaders": "0.0.5",
     "react-dom": "^17.0.1",
-    "react-prism": "^4.3.2",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0"
@@ -32,6 +32,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": [
       "react-app",
