--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "bootstrap": "^4.5.0",
+    "@types/react-redux": "^7.1.16",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-babylonjs": "^3.0.11",
     "react-babylonjs-loaders": "0.0.5",
